Rework areaportal & occluder reallocation